# phonetic-rhyme

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/phonetic_rhyme/: __init__.py  g2p.py  rhyme.py  stress.py
tests/: test_g2p.py  test_rhyme.py  test_stress.py
