[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phonetic-rhyme"
version = "0.1.0"
description = "Russian phonetic rhyme engine: grapheme-to-phoneme + stress + vowel reduction to detect words that SOUND alike (рад/брат), not just spelled alike. Pure Python, tested."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "phonetic-rhyme authors" }]
keywords = ["russian", "phonetics", "rhyme", "g2p", "nlp", "linguistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/phonetic_rhyme"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
